Fixed colour scheme variable for D3 networks

--- a/denote-explore-network.html
+++ b/denote-explore-network.html
@@ -168,7 +168,7 @@
       const width = 1440;
       const height = 900;
       const fontSize = 18;
-      const color = d3.scaleOrdinal(d3.schemeCategory10);
+      const color = d3.scaleOrdinal(d3.{{d3-colourscheme}});
       const links = data.edges; // Array of edges
       const nodes = data.nodes; // Array of nodes
 
