Fixed file type legend colour palette

--- a/denote-explore-network.html
+++ b/denote-explore-network.html
@@ -525,7 +525,7 @@
       colorBox.style.width = "15px";
       colorBox.style.height = "15px";
       colorBox.style.marginRight = "10px";
-      colorBox.style.backgroundColor = d3.schemeCategory10[legendData.indexOf(entry)];
+      colorBox.style.backgroundColor = d3.{{d3-colourscheme}}[legendData.indexOf(entry)];
       legendItem.appendChild(colorBox);
 
       const text = document.createElement("span");
